<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chat.xpert.user.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_banner" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_design_12" />

    <ImageView
        android:id="@+id/login_icon_xpert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/image_icon_xpert" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_icon_xpert"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/welcome_to_xpert"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/login_linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="+91"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="#00000000"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white65"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/login_linear_layout2"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:background="#ffffff" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/accept_terms"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto_bold"
        android:padding="8dp"
        android:text="@string/agree_and_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>