<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_banner" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_design_12" />

    <ImageView
        android:id="@+id/register_icon_xpert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/image_icon_xpert" />

    <TextView
        android:id="@+id/register_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_icon_xpert"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/register_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/image_icons_user" />

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="#00000000"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:nextFocusDown="@id/register_last_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white65"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_last_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="#00000000"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:textColor="@color/white"
            android:textColorHint="@color/white65"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="165dp"
        android:layout_height="2dp"
        android:layout_below="@+id/register_linear_layout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/register_linear_layout"
        android:layout_marginStart="200dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_linear_layout"
        android:layout_alignStart="@+id/register_linear_layout"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/register_spinner_gender"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/register_spinner_age"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_btn"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/accept_terms"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto_bold"
        android:padding="8dp"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>